# curatedMetagenomicData 0.99.8

* Added a `NEWS.md` file to track changes to the package.